--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<div class="container">
+  <h3>Heater Meter</h3>
+  <div>min = 0°C, max = 40°C</div>
+  <div>
+    <app-temperature-display [minTemperature]="0" [maxTemperature]="40" [targetTemperature]="22"></app-temperature-display>
+  </div>
+</div>
 <router-outlet></router-outlet>
